syntax = "proto3";

package upscale;

import "google/protobuf/duration.proto";

service AwUpscale {
  rpc Upscale(UpscaleRequest) returns (UpscaleResponse) {
  }
}

message Resolution {
  uint32 width = 1;
  uint32 height = 2;
}

message Resolutions {
  Resolution target = 1;
  Resolution minimum = 2;
}

message UpscaleRequest {
  oneof target_size {
    uint32 scale = 1;
    Resolutions resolutions = 2;
    uint32 nothing = 6;
  }

  optional sint32 denoise = 3;

  bytes original_file = 4;
  string original_ext = 5;

  optional google.protobuf.Duration timeout = 7;
}

message UpscaleResponse {
  Resolution res = 1;
  bytes upscaled = 2;
}
